@startuml hostelhub_class_diagram

class User {
  - _id: ObjectId
  - name: String
  - email: String
  - password: String (hashed)
  - role: Enum {renter, owner}
  - avatar: String
  - backgroundCheckDocument: String
  - leaseAgreementTemplate: String
  - leaseAgreementTemplateName: String
  - leaseAgreementTemplates: Array<LeaseTemplate>
  - hostelName: String
  - hostelDescription: String
  - hostelLogo: String
  - createdAt: Timestamp
  - updatedAt: Timestamp
  --
  + register(email, password, role): User
  + login(email, password): Boolean
  + updateProfile(data): User
  + uploadAvatar(file): String
  + uploadBackgroundCheck(file): String
  + addLeaseTemplate(template): void
  + matchPassword(password): Boolean
  + getAnalytics(): Analytics
}

class LeaseTemplate {
  - name: String
  - url: String
  - content: String
  - isDefault: Boolean
  - timestamps: Timestamp
}

class Listing {
  - _id: ObjectId
  - title: String
  - description: String
  - houseRules: String
  - location: String
  - category: Enum {Student, Worker, Female Only, Male Only, Mixed}
  - roomType: Enum {Dorm Bed, Shared Room, Private Room}
  - owner: ObjectId (ref: User)
  - monthlyRent: Number
  - deposit: Number
  - availableBeds: Number
  - amenities: Array<String>
  - images: Array<String>
  - leaseTemplateName: String
  - leaseTemplateUrl: String
  - leaseTemplateContent: String
  - isClosed: Boolean
  - createdAt: Timestamp
  - updatedAt: Timestamp
  --
  + createListing(owner, data): Listing
  + updateListing(data): Listing
  + uploadImages(files): Array<String>
  + deleteListing(): Boolean
  + setLeaseTemplate(template): void
  + closeAvailability(): void
  + openAvailability(): void
  + getInquiries(): Array<Inquiry>
  + getChats(): Array<Chat>
  + getSavedCount(): Number
}

class Inquiry {
  - _id: ObjectId
  - listing: ObjectId (ref: Listing)
  - renter: ObjectId (ref: User)
  - ownerAgreementDetails: AgreementDetails
  - renterAgreementDetails: AgreementDetails
  - status: Enum {New, Contacted, Confirmed, Declined}
  - agreementAcceptedAt: Date
  - createdAt: Timestamp
  - updatedAt: Timestamp
  --
  + createInquiry(renter, listing): Inquiry
  + updateStatus(status): Inquiry
  + submitOwnerAgreement(data): void
  + submitRenterAgreement(data): void
  + confirmInquiry(): void
  + declineInquiry(): void
  + getOwnerDetails(): AgreementDetails
  + getRenterDetails(): AgreementDetails
  + isAgreementComplete(): Boolean
}

class AgreementDetails {
  - fullName: String
  - phoneNumber: String
  - signatureDataUrl: String
  - completedAt: Date
}

class Chat {
  - _id: ObjectId
  - listing: ObjectId (ref: Listing)
  - owner: ObjectId (ref: User)
  - renter: ObjectId (ref: User)
  - messages: Array<ChatMessage>
  - lastMessage: String
  - lastMessageAt: Date
  - ownerUnreadCount: Number
  - renterUnreadCount: Number
  - createdAt: Timestamp
  - updatedAt: Timestamp
  --
  + sendMessage(sender, text): ChatMessage
  + getMessages(): Array<ChatMessage>
  + markAsRead(userId): void
  + getUnreadCount(userId): Number
  + getLastMessage(): ChatMessage
}

class ChatMessage {
  - sender: ObjectId (ref: User)
  - text: String
  - timestamps: Timestamp
}

class SavedListing {
  - _id: ObjectId
  - renter: ObjectId (ref: User)
  - listing: ObjectId (ref: Listing)
  - createdAt: Timestamp
  - updatedAt: Timestamp
  --
  + saveListing(renter, listing): SavedListing
  + unsaveListing(renter, listing): Boolean
  + isSaved(renter, listing): Boolean
}

class Analytics {
  - _id: ObjectId
  - owner: ObjectId (ref: User)
  - totalListingsPosted: Number
  - totalInquiriesReceived: Number
  - totalConfirmed: Number
  - createdAt: Timestamp
  - updatedAt: Timestamp
  --
  + updateListingsCount(): void
  + updateInquiriesCount(): void
  + updateConfirmedCount(): void
  + getAnalytics(): Object
  + calculateConversionRate(): Number
  + getMonthlyStats(): Object
}

User "1" -- "*" Listing : owns
User "1" -- "*" Inquiry : makes (as renter)
User "1" -- "*" Chat : participates
User "1" -- "*" SavedListing : saves
User "1" -- "1" Analytics : has

Listing "1" -- "*" Inquiry : receives
Listing "1" -- "*" Chat : has_conversations
Listing "1" -- "*" SavedListing : saved_by

Inquiry "1" -- "1" AgreementDetails : owner_agreement
Inquiry "1" -- "1" AgreementDetails : renter_agreement

Chat "1" -- "*" ChatMessage : contains

User "1" -- "*" LeaseTemplate : creates

@enduml